# sysml2d

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  sysmld-specification.md
examples/blender/: README.md  blender-acase.json  blender-acase.sysmld  blender-act.json  blender-act.sysmld  blender-alloc.json  blender-alloc.sysmld  blender-architecture-summary.md  blender-bdd.json  blender-bdd.sysmld  blender-context.json  blender-context.sysmld  blender-cst.json  blender-cst.sysmld  blender-flow.json  blender-flow.sysmld  blender-general.json  blender-general.sysmld  blender-ibd-composed.json  blender-ibd-composed.sysmld  blender-ibd.graph.json  blender-int.json  blender-int.sysmld  blender-intf.json  blender-intf.sysmld  blender-pkg.json  blender-pkg.sysmld  blender-req.json  blender-req.sysmld  blender-stm.json  blender-stm.sysmld  blender-uc.json  blender-uc.sysmld  blender-vcase.json  blender-vcase.sysmld  blender.sysml
examples/toaster/: README.md  toaster-acase.json  toaster-acase.sysmld  toaster-act.json  toaster-act.sysmld  toaster-alloc.json  toaster-alloc.sysmld  toaster-architecture-summary.md  toaster-bdd.json  toaster-bdd.sysmld  toaster-context.json  toaster-context.sysmld  (+27 more)
schemas/: sysmld.schema.json
skills/: README.md  new-interconnection.md  new-model.md  new-requirement-view.md  new-state-machine.md
tests/: test_action_view.py  test_cli.py  test_definition_view.py  test_interconnection_view.py  test_layout.py  test_render_svg.py  test_requirement_view.py  test_state_view.py  test_validate.py
(+26 files in other folders)
