[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sysmld"
version = "0.1.0"
description = "Deterministic SysML v2 diagram layout, validation, and SVG rendering tools"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["sysml", "sysml-v2", "mbse", "systems-engineering", "diagram", "modeling", "svg"]
license = {file = "LICENSE"}
authors = [
  {name = "Meaningful Systems, LLC"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage = "https://github.com/meaningfulsystems/sysml2d"
Repository = "https://github.com/meaningfulsystems/sysml2d"

[project.scripts]
sysmld = "sysmld.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
